# preproc_config

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: preproc_config-config.cmake.in
include/preproc_config/: declaration.hpp  export.hpp
